items listing: hostname (#21)
