# openapi.json
@@ -925,6 +925,10 @@
             "type" : "string",
             "example" : "test note"
           },
+          "hostname" : {
+            "type" : "string",
+            "example" : "localhost"
+          },
           "startTime" : {
             "type" : "string",
             "format" : "date-time"
