# src/server/queries/scenario.ts
@@ -2,7 +2,7 @@
 
 export const findItemsForScenario = (projectName, scenarioName, limit, offset) => {
   return {
-    text: `SELECT it.id, environment, upload_time as "uploadTime", base, status, start_time as "startTime", note, overview -> 'maxVu' AS "maxVu", overview -> 'duration' as duration FROM jtl.items as it
+    text: `SELECT it.id, environment, upload_time as "uploadTime", base, status, start_time as "startTime", note, hostname, overview -> 'maxVu' AS "maxVu", overview -> 'duration' as duration FROM jtl.items as it
     LEFT JOIN jtl.scenario as s ON s.id = it.scenario_id
     LEFT JOIN jtl.item_stat as st ON st.item_id = it.id
     LEFT JOIN jtl.projects as p ON p.id = s.project_id
